# otpme

./: .gitignore  INSTALL  MANIFEST.in  README.md  install.sh  man2md.sh  mkdocs.yml  pip-install.sh  pyproject.toml  requirements.txt  setup.py
bash_completion/: otpme  otpme.org
deploy/: backup_otpme.sh  otpme.conf.dist
deploy/dicts/: convert_dict.sh
deploy/freeradius/: freeradius-python3_3.2.1+dfsg-4+deb12u1_amd64.deb  freeradius-python3_3.2.7+dfsg-1+deb13u2_amd64.deb
deploy/init.d/: otpme.gentoo
deploy/logrotate/: otpme
deploy/pam/: README  otpme-account  otpme-auth  otpme-session  pam_otpme.py
deploy/pam/examples/: sshd
deploy/pam/pam-python/: README  pam-python-1.0.8.patch
deploy/pam/polkit/: 99-pcsc.rules
deploy/pam/udev/: 70-yubikey.rules
deploy/schema/: core.schema  cosine.schema  nis.schema
deploy/scripts/: add_share.sh  agent_script.sh  backup_script.sh  key_script.sh  mount_share.sh
deploy/sshd/: otpme.conf
deploy/sudoers.d/: otpme
deploy/systemd/: README  otpme.service
docs/: getting-started.md  index.md  otpme-accessgroup.md  otpme-backup.md  otpme-ca.md  otpme-client.md  otpme-device.md  otpme-dictionary.md  otpme-group.md  otpme-host.md  otpme-node.md  otpme-policy.md  otpme-pool.md  otpme-realm.md  otpme-resolver.md  otpme-role.md  otpme-script.md  otpme-share.md  otpme-site.md  otpme-token.md  otpme-tool.md  otpme-trash.md  otpme-unit.md  otpme-user.md  otpme.7.md  otpme.conf.5.md  otpme.md  pam_otpme.8.md  requirements.txt
otpme/: __init__.py  backup_cli.py  command.py  install_manpages.py  yk_piv.py
otpme/lib/: __init__.py  arp.py  audit.py  auth_cache.py  auth_script.py  backend.py  backup.py  changelog.py  compgen.py  connections.py  db_dict.py  debug.py  desktop_notify.py  doc.py  exceptions.py  filetools.py  fscoding.py  fuse.py  host.py  idle.py  incremental_objects.py  join.py  json.py  jwt.py  locking.py  log.py  mail.py  messages.py  mschap.py  mschap_util.py  multiprocessing.py  net.py  nsscache.py  nsswitch.py  offline_token.py  oid.py  otpme_acl.py  otpme_config.py  otpme_pass.py  pam.py  (+23 more)
otpme/lib/backends/file/: file.py  index.py  models.py  transaction.py
otpme/lib/cache/: __init__.py  dogpile.py  funccache.py  lru.py  memcache.py  memcached.py  memcachedb.py  redis.py
otpme/lib/classes/: __init__.py  accessgroup.py  agent_conn.py  auth_handler.py  backup.py  ca.py  client.py  command_handler.py  conn_handler.py  device.py  dictionary.py  group.py  host.py  login_handler.py  mgmt_client.py  node.py  object_config.py  otpme_agent.py  otpme_host.py  otpme_object.py  policy.py  pool.py  realm.py  resolver.py  role.py  scope.py  script.py  session.py  share.py  signing.py  site.py  ssh_agent.py  token.py  unit.py  user.py
otpme/lib/classes/data_objects/: __init__.py  cert.py  data_revision.py  failed_pass.py  last_assigned_id.py  otpme_job.py  revoked_signature.py  rsa_key.py  skip_sync.py  token_counter.py  used_hash.py  used_otp.py  used_slp.py  used_sotp.py
otpme/lib/cli/: __init__.py  accessgroup.py  ca.py  client.py  device.py  dictionary.py  group.py  host.py  job.py  node.py  policy.py  pool.py  realm.py  resolver.py  role.py  scope.py  script.py  share.py  site.py  token.py  unit.py  user.py
otpme/lib/compression/: __init__.py  base.py
otpme/lib/daemon/: __init__.py  authd.py  backupd.py  clusterd.py  controld.py  fsd.py  hostd.py  httpd.py  idled.py  joind.py  ldapd.py  mgmtd.py  otpme_daemon.py  scriptd.py  ssod.py  syncd.py  unix_daemon.py
otpme/lib/encoding/: __init__.py  base.py
otpme/lib/encryption/: __init__.py  aes.py  aes_cfb.py  argon2.py  asymmetric_key_handler.py  ec.py  ed25519.py  fernet.py  hkdf.py  jwk.py  pbkdf2.py  rsa.py  x25519.py
otpme/lib/extensions/: __init__.py  ldif_handler.py  utils.py
otpme/lib/extensions/base/: base.py
otpme/lib/extensions/posix/: posix.py
otpme/lib/freeradius/: __init__.py  otpme.py  radiusd.py  radiusd_test.py  utils.py
otpme/lib/gpg/: utils.py
otpme/lib/help/: __init__.py  accessgroup.py  agent.py  auth.py  backup.py  ca.py  client.py  cluster.py  controld.py  device.py  dictionary.py  get_authorized_keys.py  group.py  host.py  job.py  node.py  pinentry.py  pool.py  realm.py  register.py  role.py  scope.py  script.py  session.py  share.py  site.py  tool.py  trash.py  unit.py  user.py
otpme/lib/help/policy/: __init__.py  authonaction.py  autodisable.py  defaultgroups.py  defaultpolicies.py  defaultroles.py  defaultunits.py  forcetoken.py  idrange.py  logintimes.py  objecttemplates.py  password.py  tokenacls.py
otpme/lib/help/resolver/: __init__.py  ldap.py
otpme/lib/help/token/: __init__.py  fido2.py  hotp.py  link.py  (+11 more)
otpme/lib/humanize/: units.py
otpme/lib/index/: __init__.py  mysql.py  postgres.py  sqlite3.py
otpme/lib/job/: callback.py  otpme_job.py
otpme/lib/ldap/: client.py  schema.py  server.py
otpme/lib/pinentry/: pinentry.py  pynentry.py  wrapper.py
otpme/lib/pki/: cert.py  utils.py  utils_openssl.py
otpme/lib/policy/: __init__.py  get_class.py  utils.py
otpme/lib/protocols/: __init__.py  oidc_helpers.py  otpme_client.py  otpme_server.py  request.py  response.py  status_codes.py  utils.py
otpme/lib/register/: __init__.py
otpme/lib/resolver/: __init__.py  get_class.py  utils.py
otpme/lib/scripts/: agent_script.sh  key_script.sh
otpme/lib/session/: __init__.py  get_class.py  oidc_session.py
otpme/lib/smartcard/: __init__.py  get_class.py  utils.py
otpme/lib/socket/: connect.py  handler.py  listen.py  send_recv1.py
otpme/lib/token/: __init__.py  get_class.py  utils.py
otpme/man/: otpme-accessgroup.1  otpme-backup.1  otpme-ca.1  otpme-client.1  otpme-device.1  otpme-dictionary.1  otpme-group.1  otpme-host.1  otpme-node.1  otpme-policy.1  otpme-pool.1  otpme-realm.1  otpme-resolver.1  otpme-role.1  otpme-script.1  otpme-share.1  otpme-site.1  otpme-token.1  otpme-tool.1  otpme-trash.1  otpme-unit.1  otpme-user.1  otpme.1  otpme.7  otpme.conf.5  pam_otpme.8
otpme/web/: __init__.py  sso.html  sso.php
otpme/web/app/: __init__.py  babel.cfg  forms.py  views.py
otpme/web/certs/: __init__.py
(+113 files in other folders)
