[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "otpme"
description = "OTPme: A flexible One-Time-Password system"
authors = [
  {name = "The2nd", email = "the2nd@otpme.org"},
]
maintainers = [
  {name = "The2nd", email = "the2nd@otpme.org"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['OTP, U2F, fido2, oidc-provider, two factor authentication, PAM, LDAP']
classifiers = [
  "Development Status :: 3 - Alpha",
  #"Development Status :: 4 - Beta",
  #"Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
#version = "0.3.0a69"
dynamic = ["version"]

# Base install = host role: hostd + otpme-agent + PAM + nsscache +
# offline_token + CLI client + local-backup client. Mirrors what
# controld starts when host_type == "host" (no sso_server, no
# backup_server) plus client-side smartcard/PIV/GPG/FIDO support.
dependencies = [
    "argon2-cffi>=25.1.0",
    "binaryornot>=0.4.4",
    "bson>=0.5.10",
    "cachetools==5.3.1",
    "chardet>=3.0.4",
    "colorlog>=4.1.0",
    "cryptography>=48.0.1,<49",
    "Cython>=0.29.36",
    #"cymysql>=1.0.1",
    "pymysql>=1.2.0",
    "daemonize>=2.4.7",
    "dnspython>=1.15.0",
    "dogpile.cache>=0.9.0",
    "ecdsa>=0.19.2",
    "faust-cchardet>=2.1.19",
    "fido2>=2.2.0",
    "future>=0.15.2",
    "humanize>=0.5.1",
    "importlib-metadata",
    "ipaddr>=2.1.10",
    "ldap3>=2.4.1",
    "lz4>=4.3.2",
    "mfusepy>=3.0.0",
    "netifaces>=0.8",
    "orjson>=3.11.0",
    "paramiko>=3.5.0",
    "passlib>=1.7.2",
    "pexpect>=4.6.0",
    "posix-ipc>=1.0.5",
    "prettytable>=0.7.2",
    "progressbar>=2.3",
    "psutil>=5.5.1",
    "psycopg2>=2.8.6",
    "pycryptodomex>=3.7.3",
    "PyJWT>=2.8.0",
    "pylibacl>=0.5.1",
    "pylibmc>=1.6.3",
    "pyOpenSSL>=24.3.0",
    "pyotp>=2.8.0",
    "PyQRCode>=1.2.1",
    "pyre2>=0.3.6",
    "pyscard>=2.2.0",
    "pysimdjson>=6.0.2",
    "pysodium>=0.7.10",
    "python-gnupg>=0.4.9",
    "python-magic>=0.4.15",
    "pytz>=2019.3",
    "qrcode>=5.1",
    # redis-py 8.x enables maintenance notifications by default and crashes
    # on UnixDomainSocketConnection (no `host` attribute).
    # See https://github.com/redis/redis-py/issues/4086 — lift cap once fixed.
    "redis>=3.3.11,<8.0",
    "relppy>=0.4",
    "setproctitle>=1.1.10",
    "SQLAlchemy>=2.0.15",
    "SQLAlchemy-Utils>=0.36.8",
    "strongtyping",
    "termcolor>=1.1.0",
    "tlssysloghandler>=1.0.3",
    "ujson>=5.7.0",
    "xattr>=1.2.0",
    "yubikey-manager>=5.9.1",
	"systemd>=0.16.1",
	"jeepney>=0.8.0",
	"pynentry>=0.1.9",
]

[project.optional-dependencies]
# backuphost = host + backupd (config.backup_server == True).
# Adds rbloom for BackupServer dedup (classes/backup.py:1905).
backuphost = [
    "rbloom>=1.5.4",
]

# ssohost = host + ssod + httpd (config.sso_server == True).
# Flask web portal + gunicorn + joserfc (OIDC JWK signing).
ssohost = [
    "Flask>=3.0.3",
    "Flask-Babel>=4.0.0",
    "Flask-Limiter>=3.5.0",
    "Flask-Login>=0.6.3",
    "Flask-WTF>=1.2.1",
    "gunicorn>=23.0.0",
    "joserfc>=1.0.0",
]

# Full server = host + backuphost + ssohost + node-only daemons:
# LDAPd (Twisted/ldaptor), FreeRADIUS plugin (pyrad), cluster ARP
# (arprequest/scapy).
node = [
    "otpme[backuphost]",
    "otpme[ssohost]",
    "arprequest>=0.3",
    "ldaptor>=21.2.0",
    "pyrad>=2.4",
    "radius-eap-mschapv2-client>=1.0.6",
    "scapy>=2.4.4",
    "service_identity",
    "Twisted>=24.3.0",
]

dev = [
    "coverage",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/the2nd/otpme"
#Homepage = "https://www.otpme.org/redmine"
Documentation = "https://otpme.readthedocs.io/"
Repository = "https://github.com/the2nd/otpme.git"
Issues = "https://github.com/the2nd/otpme/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
otpme-agent = "otpme.bin.command:otpme_commands"
otpme-cluster = "otpme.bin.command:otpme_commands"
otpme-accessgroup = "otpme.bin.command:otpme_commands"
otpme-auth = "otpme.bin.command:otpme_commands"
otpme-ca = "otpme.bin.command:otpme_commands"
otpme-client = "otpme.bin.command:otpme_commands"
otpme-controld = "otpme.bin.command:otpme_commands"
otpme-group = "otpme.bin.command:otpme_commands"
otpme-host = "otpme.bin.command:otpme_commands"
otpme-node = "otpme.bin.command:otpme_commands"
otpme-realm = "otpme.bin.command:otpme_commands"
otpme-role = "otpme.bin.command:otpme_commands"
otpme-session = "otpme.bin.command:otpme_commands"
otpme-site = "otpme.bin.command:otpme_commands"
otpme-token = "otpme.bin.command:otpme_commands"
otpme-tool = "otpme.bin.command:otpme_commands"
otpme-trash = "otpme.bin.command:otpme_commands"
otpme-unit = "otpme.bin.command:otpme_commands"
otpme-user = "otpme.bin.command:otpme_commands"
otpme-scope = "otpme.bin.command:otpme_commands"
otpme-script = "otpme.bin.command:otpme_commands"
otpme-policy = "otpme.bin.command:otpme_commands"
otpme-dictionary = "otpme.bin.command:otpme_commands"
otpme-resolver = "otpme.bin.command:otpme_commands"
otpme-share = "otpme.bin.command:otpme_commands"
otpme-pool = "otpme.bin.command:otpme_commands"
otpme-device = "otpme.bin.command:otpme_commands"
otpme-mount = "otpme.bin.command:otpme_commands"
otpme-job = "otpme.bin.command:otpme_commands"
otpme-pinentry = "otpme.bin.command:otpme_commands"
otpme-backup = "otpme.bin.command:otpme_commands"
otpme-get-authorized-keys = "otpme.bin.command:otpme_commands"
setreadahead = "otpme.bin.setreadahead:main"
otpme-install-manpages = "otpme.bin.install_manpages:main"
local-backup = "otpme.bin.backup_cli:main"
otpme-yk-piv = "otpme.bin.yk_piv:main"
otpme-hpke = "otpme.bin.hpke:main"

[tool.setuptools.dynamic]
version = {attr = "otpme.__version__"}
#readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["otpme*"]
namespaces = true

[tool.setuptools.package-data]
otpme = [
    "web/app/static/*",
    "web/app/templates/*",
    "locale/*/LC_MESSAGES/*.mo",
    "locale/*/LC_MESSAGES/*.po",
    "man/*.1",
    "man/*.5",
    "man/*.7"
]

[tool.pytest.ini_options]
# Unit tests live under tests/unit/. The shell-script integration tests
# (tests/*.sh) and the pre-existing 999-test_backup.py are not picked
# up by pytest because they don't match python_files below and aren't
# under testpaths.
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.ruff]
# Vendored upstream code — do not lint.
extend-exclude = ["otpme/lib/third_party"]

[tool.ruff.lint]
# Rules that have been swept clean across the first-party tree.
# Enabled here to prevent the patterns from creeping back in.
#   E722  bare 'except:' (catches BaseException incl. KeyboardInterrupt/SystemExit)
#   B006  mutable default arguments (shared state across calls)
#   B904  raise inside except without 'from' (loses exception chain)
#   UP008 super(ClassName, self) instead of super()
select = ["E722", "B006", "B904", "UP008"]

[tool.ruff.lint.flake8-builtins]
# OTPme exposes gettext's _() as a global builtin.
builtins-ignorelist = ["_"]
